# colored-csv

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs
src/processor/: mod.rs
src/table/: mod.rs
src/tui/: csv_data.rs  mod.rs
src/utils/: mod.rs
