[package]
name = "table-csv"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
colored = "2"
log = "0.4.26"
env_logger = "0.11.7"
clap = { version = "4", features = ["derive"] }
termion = "4.0.4"
unicode-width = "0.1.11"
strip-ansi-escapes = "0.2.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"
